# Todo-App-Poetry

./: README.md  pyproject.toml
todo/: main.py
